// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Section > renders default as expected 1`] = `
<div>
  <div
    class="section mx-16 my-8 max-w-full overflow-hidden"
  >
    <div
      class="section__header ml-4 flex justify-between items-center gap-4"
    >
      <div
        class="section__content flex-1"
      >
        <h2
          class="section__title text-bluedot-normal text-[48px] mb-4 font-serif font-extrabold leading-none relative after:content-[''] after:absolute after:top-1/2 after:translate-y-[-50%] after:ml-8 after:h-[2px] after:bg-bluedot-normal after:w-[100%]"
        >
          This is the title
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    />
  </div>
</div>
`;

exports[`Section > renders with optional args 1`] = `
<div>
  <div
    class="section mx-16 my-8 max-w-full overflow-hidden"
  >
    <div
      class="section__header ml-4 flex justify-between items-center gap-4"
    >
      <div
        class="section__content flex-1"
      >
        <h2
          class="section__title text-bluedot-normal text-[48px] mb-4 font-serif font-extrabold leading-none relative after:content-[''] after:absolute after:top-1/2 after:translate-y-[-50%] after:ml-8 after:h-[2px] after:bg-bluedot-normal after:w-[100%]"
        >
          This is the title
        </h2>
        <p
          class="section__subtitle text-bluedot-darker text-md mb-4"
        >
          This is the subtitle
        </p>
      </div>
    </div>
    <div
      class="section__body"
    />
  </div>
</div>
`;

exports[`Section > renders with optional yield 1`] = `
<div>
  <div
    class="section mx-16 my-8 max-w-full overflow-hidden"
  >
    <div
      class="section__header ml-4 flex justify-between items-center gap-4"
    >
      <div
        class="section__content flex-1"
      >
        <h2
          class="section__title text-bluedot-normal text-[48px] mb-4 font-serif font-extrabold leading-none relative after:content-[''] after:absolute after:top-1/2 after:translate-y-[-50%] after:ml-8 after:h-[2px] after:bg-bluedot-normal after:w-[100%]"
        >
          This is the title
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    >
      <p>
        This is the yield
      </p>
    </div>
  </div>
</div>
`;
